--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,13 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   mvc_pattern: ^6.6.4+2
   splashscreen: ^1.3.5
   cupertino_icons: ^1.0.0
+
+  
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +39,7 @@ flutter:
 
   assets:
     - assets/logo.jpg
+    - assets/logo.png
       
 
   # An image asset can refer to one or more resolution-specific "variants", see
