--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   mvc_pattern: ^6.6.4+2
   splashscreen: ^1.3.5
   cupertino_icons: ^1.0.0
+  font_awesome_flutter: ^8.11.0
+  http: ^0.12.2
 
   
   flutter:
@@ -40,6 +42,7 @@ flutter:
   assets:
     - assets/logo.jpg
     - assets/logo.png
+    - assets/max.jpg
       
 
   # An image asset can refer to one or more resolution-specific "variants", see
